# mmtrial

./: .gitignore  README.md  conda-apple-py311.yaml  conda-mmdet-py311.yaml  conda-mmyolo-py311.yaml  copy_category.sh  copy_severity.sh  faster-rcnn_r101_fpn_1x_coco.py  faster-rcnn_r50_fpn_1x_coco.py  filter_log.sh  inference.py  pyproject.toml  ruff.toml
src/mmtrial/: __init__.py  inference_mmdet.py  plot.py
src/mmtrial/configs/: cascade-rcnn_r101_fpn_1x_coco.py  cascade-rcnn_r101_fpn_1x_coco_v2.py  dino-5scale_swin-l_8xb2-36e_coco.py  faster-rcnn_r101_fpn_1x_coco.py  faster-rcnn_r101_fpn_1x_coco_v2.py  faster-rcnn_r50_fpn_1x_coco.py  mask-rcnn_swin-t-p4-w7_fpn_ms-crop-3x_coco.py  resnet101_8xb32_in1k_bl_n7.py  resnet101_8xb32_in1k_n3.py  resnet101_8xb32_in1k_n7.py  rtmdet_l_swin_b_4xb32-100e_coco.py  yolov3_d53_mstrain-608_273e_coco.py  yolov3_d53_mstrain-608_273e_coco_v2.py  yolov8_l_syncbn_fast_8xb16-500e_coco.py  yolox_x_8x8_300e_coco.py
src/mmtrial/hooks/: __init__.py  unfreeze_backbone_epoch_based_hook.py  unfreeze_base_hook.py  unfreeze_mmdet_hook.py  unfreeze_mmpretrain_hook.py
src/mmtrial/models/: __init__.py  linear_fpn_cls.py
src/mmtrial/sampler/: __init__.py  balance_sampler.py
src/mmtrial/tx/: __init__.py  rand_mmdet_tx.py  rand_tx.py  random_affine.py  random_shift.py
tools/: copy_category.sh  env.py  inference_mmdet.py  train.py  utils.py
